--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,11 @@ dependencies:
   equatable: 2.0.5
   floating_bottom_navigation_bar: 1.5.2
   flutter_animate: 4.5.0
+  flutter_barcode_scanner: 
+    git:
+      url: https://github.com/FlutterFlow/flutter_barcode_scanner
   flutter_cache_manager: 3.3.1
+  flutter_plugin_android_lifecycle: 2.0.20
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
